# EnvisionPerdido

./: .dockerignore  .env.example  .gitignore  .ruff.toml  ABS_SIGMOID_RETRAIN_SUMMARY.md  AGENTS.md  ASSESSMENT_INDEX.md  AUTOMATION_AUDIT_REPORT.md  BRANCHING_QUICK_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVENT_SUMMARY_DEPLOYMENT.md  IMAGE_DEDUPLICATION_SUMMARY.md  IMAGE_DEDUP_README.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_FIX_PROGRESS.md  PRODUCTION_READINESS_SUMMARY.md  PROJECT_STRUCTURE_VERIFICATION_REPORT.md  QUICK_FIX_REFERENCE.md  README.md  SECURITY_API_KEY_EXPOSED.md  SETUP_API_KEY_QUICK_GUIDE.md  SVM_MODEL_FIX_SUMMARY.md  WREN_HAVEN_IMPLEMENTATION.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  verify_imports.py
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
analysis/: __init__.py  svm_dataflow_visualization.ipynb  svm_diagnostics.py
data/: community_calendar_sources.json  event_image_mapping.csv  image_keyword_config.json
docs/: ARCHITECTURE_AND_DATAFLOW.md  ARCHITECTURE_DIAGRAMS.md  AUTOMATION_SETUP.md  BRANCHING_QUICK_REFERENCE.md  CI_CD_GUIDE.md  CLEANUP_SUMMARY.md  COMMANDS.md  CONTRIBUTING.md  CRITICAL_ISSUES.md  CROSS_PLATFORM_SETUP.md  DEDUPLICATION_INDEX.md  DELIVERABLES.md  DELIVERY_COMPLETE.md  DELIVERY_SUMMARY.md  EVENT_DESCRIPTION_FIX_SUMMARY.md  EVENT_NORMALIZATION_IMPLEMENTATION.md  EVENT_NORMALIZATION_QUICK_REFERENCE.md  EVENT_SUMMARY_GENERATOR_GUIDE.md  FILE_MANIFEST.md  GITHUB_SECRETS.md  GIT_WORKFLOW_QUICK_REFERENCE.md  GOOGLE_SHEETS_IMPLEMENTATION_SUMMARY.md  (+29 more)
(+250 files in other folders)
