[project]
name = "envision-perdido"
version = "0.1.0"
description = "Automated community calendar scraping, classification, and WordPress publishing pipeline."
requires-python = ">=3.13"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "playwright>=1.45.0",
    "tqdm",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn==1.8.0",
    "joblib",
    "python-wordpress-xmlrpc",
    "python-dotenv",
    "python-dateutil",
    "urllib3",
    "openai>=1.3.0",
    "diagrams>=0.23.4",
    "matplotlib",
    "seaborn",
    "yellowbrick",
    "eli5",
    "setuptools",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
default-groups = ["dev"]
